@@ -175,6 +175,10 @@ function _advanced_forum_preprocess_forum_list(&$variables) {
 
   // Theme subcontainers, subforums and add post counts to parents.
   foreach ($tables as $table_id => $table) {
+    if (!isset($table['items']))
+      $table['items'] = array();
+    if (!isset($tables[$table_id]['items']))
+      $tables[$table_id]['items']= array();
     foreach ($table['items'] as $item_id => $item) {
       if (!empty($item->subforum_list)) {
         $tables[$table_id]['items'][$item_id]->subforums = theme('advanced_forum_subforum_list', array('subforum_list' => $item->subforum_list));
